--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Prince</h1>
-                            <h3 class="home__subtitle">Full Stack Web Developer</h3>
+                            <h3 class="home__subtitle">Front-End Web Developer</h3>
                             <p class="home__description">Hign level experience in web design & development. </p>
                             <a href="#contact" class="button button--flex">Contact me
                                 <i class="uil uil-message button__icon"></i>
@@ -150,20 +150,21 @@
                         </div>
 
                         <div>
-                            <span class="about__info-title">03+</span>
+                            <span class="about__info-title">06+</span>
                             <span class="about__info-name">Completed <br> Project</span>
                         </div>
 
                         <div>
                             <span class="about__info-title">Worked</span>
-                            <span class="about__info-name">as a<br>
-                                Freelencer
+                            <span class="about__info-name">at<br>
+                                Sunfocus Solution Pvt.Ltd
                             </span>
                         </div>
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/Paras Grover React js developer resume.pdf" class="button button--flex">Download
+                        <a download="" href="/assets/pdf/React Software Engineer.pdf"
+                            class="button button--flex">Download
                             CV
                             <i class="uil uil-download-alt button__icon"></i>
                         </a>
@@ -244,7 +245,7 @@
 
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">react</h3>
+                                    <h3 class="skills__name">react js</h3>
                                     <span class="skills__number">70%</span>
                                 </div>
                                 <div class="skills__bar">
@@ -289,7 +290,7 @@
                             </div>
 
 
-                            <div class="skills__data">
+                            <!-- <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">C/C++</h3>
                                     <span class="skills__number">30%</span>
@@ -297,7 +298,7 @@
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__C"></span>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="skills__data">
                                 <div class="skills__titles">
@@ -351,7 +352,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Photoshop</h3>
-                                    <span class="skills__number">50%</span>
+                                    <span class="skills__number">40%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__photoshop"></span>
@@ -463,7 +464,7 @@
                         <!--==================== QUALIFICATION 1====================-->
                         <div class="qualification__data">
                             <div>
-                                <h3 class="qualification__title">Web Developer Internship</h3>
+                                <h3 class="qualification__title">Web Developer</h3>
                                 <span class="qualification__subtitle">React js
                                     - Sonfocus Solution PVT.LTD</span>
                                 <div class="qualification__calender">
@@ -488,7 +489,7 @@
                             <div>
                                 <h3 class="qualification__title">Frontend Developer</h3>
                                 <span class="qualification__subtitle">Html, CSS, JS, React, SCSS, Tailwind CSS, Bootsrap
-                                    - YouTube</span>
+                                </span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2018-2022
@@ -502,7 +503,7 @@
 
                             <div>
                                 <h3 class="qualification__title">UI/UX</h3>
-                                <span class="qualification__subtitle">Figma - YouTube</span>
+                                <span class="qualification__subtitle">Figma</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2021-2022
@@ -965,7 +966,7 @@
 
                         <div>
                             <h3 class="contact__title">Location</h3>
-                            <span class="contact__subtitle">Sonipat (Haryana)</span>
+                            <span class="contact__subtitle">India</span>
                         </div>
                     </div>
                 </div>
@@ -1010,7 +1011,7 @@
             <div class="footer__container container grid">
                 <div>
                     <h1 class="footer__title">Prince Grover</h1>
-                    <span class="footer__subtitle">Fullstack developer</span>
+                    <span class="footer__subtitle">Front-End developer</span>
                 </div>
 
                 <ul class="footer__links">
