--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                             <div>
                                 <h3 class="qualification__title">Web Developer</h3>
                                 <span class="qualification__subtitle">React js
-                                    - Sonfocus Solution PVT.LTD</span>
+                                    - JY Technologies Consulting Pvt. Ltd.</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2023-Present
