--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="/assets/pdf/React Software Engineer.pdf"
+                        <a download="" href="/assets/pdf/Paras Grover(React js developer).pdf"
                             class="button button--flex">Download
                             CV
                             <i class="uil uil-download-alt button__icon"></i>
@@ -369,7 +369,7 @@
             <h2 class="section__title">Qualification</h2>
             <span class="section__subtitle">My personal Journey</span>
 
-            <div class="qualification__container container">
+            <div class="qualification__container container ">
                 <div class="qualification__tabs">
                     <div class="qualification__button button--flex qualification__active" data-target='#education'>
                         <i class="uil uil-graduation-cap qualification__icon"></i>
