--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <div>
                             <span class="about__info-title">Worked</span>
                             <span class="about__info-name">at<br>
-                                Sunfocus Solution Pvt.Ltd
+                                JY Technologies Consulting Pvt.Ltd
                             </span>
                         </div>
                     </div>
@@ -466,7 +466,7 @@
                             <div>
                                 <h3 class="qualification__title">Web Developer</h3>
                                 <span class="qualification__subtitle">React js
-                                    - JY Technologies Consulting Pvt. Ltd.</span>
+                                    - JY Technologies Consulting Pvt.Ltd</span>
                                 <div class="qualification__calender">
                                     <i class="uil uil-calendar-alt"></i>
                                     2023-Present
@@ -554,7 +554,7 @@
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
-            <h2 class="section__title">Services</h2>
+            <h2 class="section__title ">Services</h2>
             <span class="section__subtitle">What i offer</span>
 
             <div class="services__container container grid">
